--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nodemon": "^1.17.3"
   },
   "dependencies": {
-    "csvtojson": "^1.1.9"
+    "csvtojson": "^1.1.9",
+    "through2": "^2.0.3"
   }
 }
