--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   },
   "dependencies": {
     "csvtojson": "^1.1.9",
-    "through2": "^2.0.3"
+    "through2": "^2.0.3",
+    "commander": "^2.15.1",
+    "path": "^0.12.7"
   }
 }
