--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
     "nodemon": "^1.17.3"
   },
   "dependencies": {
-    "csvtojson": "^1.1.9",
-    "through2": "^2.0.3",
     "commander": "^2.15.1",
-    "path": "^0.12.7"
+    "csvtojson": "^1.1.9",
+    "express": "^4.16.3",
+    "path": "^0.12.7",
+    "through2": "^2.0.3"
   }
 }
