--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "nodemon": "^1.17.3"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
     "commander": "^2.15.1",
     "csvtojson": "^1.1.9",
     "express": "^4.16.3",
     "path": "^0.12.7",
-    "through2": "^2.0.3"
+    "through2": "^2.0.3",
+    "underscore": "^1.9.1"
   }
 }
