--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
     "commander": "^2.15.1",
     "csvtojson": "^1.1.9",
     "express": "^4.16.3",
+    "jsonwebtoken": "^8.3.0",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "through2": "^2.0.3",
     "underscore": "^1.9.1"
