--- a/package.json
+++ b/package.json
@@ -28,8 +28,11 @@
     "express": "^4.16.3",
     "jsonwebtoken": "^8.3.0",
     "passport": "^0.4.0",
+    "passport-facebook": "^2.1.1",
+    "passport-google-oauth20": "^1.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "passport-twitter": "^1.0.4",
     "path": "^0.12.7",
     "through2": "^2.0.3",
     "underscore": "^1.9.1"
