done - add user and product to db and show it to use routing

--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "passport-local": "^1.0.0",
     "passport-twitter": "^1.0.4",
     "path": "^0.12.7",
+    "pg": "^7.4.3",
+    "sequelize": "^4.38.0",
+    "sequelize-cli": "^4.0.0",
     "through2": "^2.0.3",
     "underscore": "^1.9.1"
   }
