--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "csvtojson": "^1.1.9",
     "express": "^4.16.3",
     "jsonwebtoken": "^8.3.0",
+    "mongodb": "^3.1.1",
+    "mongoose": "^5.2.2",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
     "passport-google-oauth20": "^1.0.0",
