--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "passport-local": "^1.0.0",
     "passport-twitter": "^1.0.4",
     "path": "^0.12.7",
+    "swagger-ui-express": "^3.0.10",
     "through2": "^2.0.3",
     "underscore": "^1.9.1"
   }
